Update content and templates: refine thesis statements, enhance user agent guidance, and add title to note detail template

--- a/templates/note.html
+++ b/templates/note.html
@@ -14,6 +14,8 @@
 
         <article class="note-detail {{.Theme}}">
             
+            <h1 class="detail-title">{{.Title}}</h1>
+            
             <p class="detail-thesis">{{.Thesis}}</p>
             
             {{if .Quote}}
